# code-recipes

./: .gitignore  README.md
asm/: hello.asm
complier-principles/dfa/: package-lock.json  package.json  webpack.config.js
complier-principles/dfa/src/: constants.js  dfa.js  index.js  type.js  utils.js
complier-principles/toyscript/: README.md  bun.lockb  index.ts  lox.ts  package.json  parser.ts  scanner.ts  token.ts  tokenType.ts
complier-principles/toyscript/ast/: astNode.ts  astPrinter.ts  index.ts
cpp/cpp_template/: CMakeLists.txt  accum.hpp  main.cpp  make
cpp/cpp_template/src/: chapter_1.cc
cpp/test/: main.cpp
flutter/sushi_store/: .gitignore  pubspec.yaml
flutter/todo/: pubspec.yaml
frontend/demos/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/examples/: float_items.html
frontend/learn_nextjs/: package-lock.json  package.json
frontend/learn_ts/: package-lock.json  package.json  pnpm-lock.yaml
frontend/mini-react/: main.jsx  yakumo.js
frontend/notes/: package.json  pnpm-lock.yaml
frontend/prisma/: package.json  pnpm-lock.yaml  tailwind.config.ts
go/151/: go.mod  main.go
go/349/: main.go
go/demos/: go.mod
go/go-web-example/: go.mod  main.go
js/: add.ts
lisp/: db.lisp
lua/basic/: echo_arg.lua  hello.lua  metatable.lua  oop.lua  string.lua  table.lua  test_io.lua
lua/test/: luac.out
php/: index.php  test.php
php/learn/: index.php  test.php
python/: hello.py
python/netcat/: netcat.py
python/tcp-server/: client.py  server.py
zig/: array.zig  character.zig  main.zig  test_pass.zig  variable.zig
(+56 files in other folders)
